--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,31 +1,52 @@
 <h2 class="mb-2">About Me</h2>
+<p>There's a looot of text here, I know. This is only for people who are interested in me or in what I do, so a big part of this are just fun facts or random pieces of information about me. I have, however, split it up into sections to make it more digestible.</p>
 
+<h4 class="mb-2">General info</h4>
 <ul class="list-group list-group-flush">
     <li class="list-group-item">
-        I love to code, mostly in the Unity3D framework, in Python and in Angular. My two biggest projects right now are Tiersorter and ezgpt, which you can learn more about at <a routerLink="/projects" ngbTooltip="https://ascyt.com/projects">projects</a>. I have a lot of plans for projects, but since school is taking away a lot of my free time, it's hard to focus on them. The project I'm currently working on the most is Tiersorter, check it out <a routerLink="/projects/tiersorter" target="_blank" ngbTooltip="https://tiersorter.ascyt.com/">here</a>!
+        I love to code, mostly using Angular, the Unity3D framework, or raw C# or Python. I have a lot of plans for projects, but since school is taking away a lot of my free time, it's hard to focus on them. I'm especially guilty of starting a lot of new projects only to abandon them later - though I'm trying my best to break this habit.
     </li>
     <li class="list-group-item">
-        I mostly code in C# and in Python. I also know a good amount of C, C++ and web-development (Angular, HTML, CSS, JavaScript). If you ever need a website, Discord bot, console application, or anything similar, hit me up!
+        If you ever need a website, Discord bot, console application, or anything similar, feel free <a routerLink="/contact" ngbTooltip="https://ascyt.com/contact">hit me up</a>! I'm always open to new projects, and we can discuss the details and pricing.
     </li>
     <li class="list-group-item">
         I'm male. Since I don't really care you can use any pronoun you want, but I might have problems trying to figure out if you're referring to me if you don't use 'he' or 'they'. 
     </li>
     <li class="list-group-item">
-        Despite German being my native language, I also have great English skills, mostly having acquired them from the internet. Other than that I'm also able to speak a little bit of Spanish, which I've learned using Duolingo <i> (which I quit because they stupidly removed the option to use the keyboard, seriously bring that back I beg you)</i>, and a sad amount of French, given that I've had it in school for two years.
+        Despite German being my native language, I also have great English skills, mostly having acquired them from the internet. Other than that I'm also able to speak a little bit of Spanish, which I've learned using Duolingo <i> (which I quit because they stupidly removed the option to use the keyboard, seriously bring that back I beg you)</i>, and a sad amount of French, given that I've had to learn it in school for two straight years.
     </li>
     <li class="list-group-item">
-        I like to practice typing for fun, mostly using <a href="https://data.typeracer.com/pit/profile?user=ascyt" target="_blank" ngbTooltip="https://data.typeracer.com/pit/profile?user=ascyt">typeracer</a> and <a href="https://10fastfingers.com/user/2057874/" target="_blank" ngbTooltip="https://10fastfingers.com/user/2057874/">10FastFingers</a>. I've been using the <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/KB_United_States_Dvorak.svg/1200px-KB_United_States_Dvorak.svg.png" target="_blank" ngbTooltip="Image showing the Dvorak layout">Dvorak keyboard layout</a> since April 2021, and am currently sitting at around 100 words per minute.
+        I don't have a very wide taste in music, I mostly just listen to EDM (more precisely, progressive house and trance). Since most of the artists I frequently listen to are pretty unknown, you're probably not going to have heard of any of the songs I mostly listen to, but you can check out some of my top songs of the past 30 days <a href="https://open.spotify.com/playlist/4JWSOPMo4rrJlcpWHh5KHI" target="_blank" ngbTooltip="https://open.spotify.com/playlist/4JWSOPMo4rrJlcpWHh5KHI">here</a>.
     </li>
     <li class="list-group-item">
-        I don't have a very wide taste in music, I mostly just listen to EDM (more precisely, Progressive House). Since most of the artists I frequently listen to are pretty unknown, you're probably not going to have heard of any of the songs I mostly listen to, but you can find some of my top songs of the past 30 days <a href="https://open.spotify.com/playlist/4JWSOPMo4rrJlcpWHh5KHI" target="_blank" ngbTooltip="https://open.spotify.com/playlist/4JWSOPMo4rrJlcpWHh5KHI">here</a>.
+        I like to practice typing for fun, mostly using <a href="https://data.typeracer.com/pit/profile?user=ascyt" target="_blank" ngbTooltip="https://data.typeracer.com/pit/profile?user=ascyt">typeracer</a> and <a href="https://10fastfingers.com/user/2057874/" target="_blank" ngbTooltip="https://10fastfingers.com/user/2057874/">10FastFingers</a>. I've been using the <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/KB_United_States_Dvorak.svg/1200px-KB_United_States_Dvorak.svg.png" target="_blank" ngbTooltip="Image showing the Dvorak layout">Dvorak keyboard layout</a> since April 2021, and am currently sitting at around 110 words per minute. Before I switched to Dvorak, I was sitting at around 70 words per minute with QWERTZ (which is similar to QWERTY with a few changes), however I switched because Dvorak is faster, more ergonomic, and, unlike other alternative layouts, is supported by most operating systems out of the box, and it even works on Windows school computers.
     </li>
     <li class="list-group-item">
-        I intentionally kept the design of this website pretty simple, I'm not a big fan of having a lot of fancy animations, colors or effects on websites, I honestly find this pretty distracting. There may or may not be some easter eggs hidden here though, who knows? ;) <span class="hidden-text">There might be something small in my 404 site...</span>
+        I currently visit the higher technical school in Austria <a href="https://htl-leonding.at/" ngbTooltip="https://htl-leonding.at/" target="_blank">HTL Leonding</a> in the IT-department, which I am hopefully going to finish in mid-2026. Not sure what I am going to do after that, but after having done Austria's mandatory military service I'm probably going to do something that has to do with software development, and if possible in more of a leadership role, rather than just implementing GUIs or writing unit tests all day. I might even start my own company some day, however I don't think I'm ready to take any larger financial risks yet. 
     </li>
     <li class="list-group-item">
-        If for whatever reason you'd like to donate to me, you can do so on <a routerLink="/donate" target="_blank" ngbTooltip="https://ko-fi.com/ascyt">ko-fi</a>. Also, I'm open to commissions, so if you want me to code something for you, hit me up!
+        If for whatever reason you'd like to donate to me, you can do so on <a routerLink="/donate" target="_blank" ngbTooltip="https://ko-fi.com/ascyt">ko-fi</a>. Also, I'm open to coding commissions, so if you want me to code something for you, hit me up!
     </li>
     <li class="list-group-item">
-        I'm a friendly and accepting guy. If you want to chat, feel free to hit me up on Discord or similar, I appreciate every DM I get! Thanks for checking out my small website :)
+        I'm a friendly and accepting guy. If you want to chat, for any reason at all, feel free to hit me up on Discord or similar, I appreciate every DM I get! Thanks for checking out my small website :)
+    </li>
+</ul>
+<h4 class="mb-2">Technical jargon</h4>
+<ul class="list-group list-group-flush">
+    <li class="list-group-item">
+        I know a good amount of full-stack web-development, however I would say I prefer being the guy that plans the project, manages the git repo, and gives out the tasks, rather than the guy that just does exactly how he's told. However, if not, I prefer to work on the front-end rather than the backend, especially not with the mess that databases can be. But honestly, anything's fine as long as it's not React.js or anything weird like Rust (I know a lot of people like it, but it just seems to complicated and I don't see much of a point in learning it).
+    </li>
+    <li class="list-group-item">
+        For most programming tasks, I use Visual Studio Code, which is a great editor that I can personally recommend. I've used Vim motions for a while, however I switched back to normal after I've realized that it doesn't really significantly improve my coding speed, and that I have my issues with how it works (why does it have the habit of copying everything I edit??). I dislike, but am also not completely opposed to, JetBrains IDEs, they do feel kind of bloated, unintuitive, and have a lot of weird quirks (why do they have to use custom file dialogs that barely work?), but I mainly dislike them just because of their proprietary, and often subscription-based nature. 
+    </li>
+    <li class="list-group-item">
+        I mainly use Windows. I am a big fan of Linux (it really is just better and more logical than Windows), and especially the KDE Plasma desktop environment, and I would switch if there was not for one piece of software that Windows has that I can't live without: AutoHotkey. I used it for a ton of configuring, for example I repurposed the CapsLock key to be a modifier key, have a mode which allows me to move the mouse with just my keyboard's home row, I have a hotkey which lets me calculate the current selection in any program, and a lot more. You can find my AutoHotkey repository <a href="https://github.com/Ascyt/ahk" target="_blank" ngbTooltip="https://github.com/Ascyt/ahk">here</a>, however keep in mind that it is hard-coded for my keyboard layout.<br />
+        I know technically anything's possible in Linux, however I just haven't found anything that's as powerful and as fast as AutohotKey, and lets me do these things with ease. I know that technically anything's possible in Linux, but it is just so difficult to do much of anything without a proper framework like AutoHotkey. If you know of a good alternative, please let me know!
+    </li>
+    <li class="list-group-item">
+        The vast majority of projects I make are <b>open-source</b>, but I'm also not completely opposed to closed-source or apps that cost some sort of one-time fee, after all people need to pay their rent in one way or another. However, I do firmly believe that it is quite greedy and nonsensical to charge a subscription for a piece of software that is solely client-sided and only needs to run on the user's machine, without any sort of constant server costs. I mean, I'm not going to go to the hardware store and buy a hammer, just to have to pay 20 bucks a month to be able to use it, right? Point is, if I ever charge a subscription for a piece of software, I believe that I have failed as a developer and as a person, and I deserve to be called out for that.
+    </li>
+    <li class="list-group-item">
+        I intentionally kept the design of this website pretty simple, I'm not a big fan of having a lot of fancy animations, colors or effects on websites, I honestly find this stuff pretty distracting and annoying. There may or may not be some easter eggs hidden here though, who knows? ;) <span class="hidden-text">There might be something small in my 404 site...</span>
     </li>
 </ul>
