--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,5 +33,5 @@
 </nav>
 <div class="container">
   <router-outlet />
-  <p class="text-left notice">Licensed under <a href="/license" target="_blank" ngbTooltip="https://github.com/Ascyt/www/blob/main/LICENSE">GPL-3.0</a>.</p>
+  <p class="text-left notice">Licensed under <a href="/license" target="_blank" ngbTooltip="https://github.com/Ascyt/www/blob/main/LICENSE">GPL-3.0</a> • <a href="/source" ngbTooltip="https://github.com/Ascyt/www" target="_blank">Source Code</a> • <a href="/donate" ngbTooltip="https://ko-fi.com/Ascyt" target="_blank">♡ Donate ♡</a></p>
 </div>
