--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,31 +1,31 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 
 :root {
-    --back: #080808;
-    --back-high: #101010;
-    --back-mid: #303030;
-    --back-low: #505050;
-    --mid: #808080;
+    --back: #080610;
+    --back-high: #100c20;
+    --back-mid: #201840;
+    --back-low: #403080;
+    --mid: #7f70b9;
     --front-low: #a0a0a0;
     --front-mid: #c0c0c0;
     --front-high: #e0e0e0;
     --front: #ffffff;
-    --link: #0078d7;
-    --link-hover: #005299;
+    --link: #8060ff;
+    --link-hover: #403080;
 }
 
 .dark-theme {
-    --back: #080808;
-    --back-high: #101010;
-    --back-mid: #303030;
-    --back-low: #505050;
-    --mid: #808080;
+    --back: #080610;
+    --back-high: #100c20;
+    --back-mid: #201840;
+    --back-low: #403080;
+    --mid: #7f70b9;
     --front-low: #a0a0a0;
     --front-mid: #c0c0c0;
     --front-high: #e0e0e0;
     --front: #ffffff;
-    --link: #0078d7;
-    --link-hover: #005299;
+    --link: #8060ff;
+    --link-hover: #403080;
     transition: 0.2s;
 }
 .light-theme {
@@ -38,8 +38,8 @@
     --front-mid: #404040;
     --front-high: #202020;
     --front: #000000;
-    --link: #0d6efd;
-    --link-hover: #0a58ca;
+    --link: #8060ff;
+    --link-hover: #403080;
     transition: 0.2s;
 }
 .what { // ignore this
