Removed underline effect of navbar and contact links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/home">
-      <img class="logo d-inline-block align-text-top" src="assets/images/logo.png" alt="Logo" />
+    <a class="navbar-brand logo" href="/home">
+      <img class="d-inline-block align-text-top" src="assets/images/logo.png" alt="Logo" />
     </a>
     <button class="navbar-toggler" [ngClass]="themeSwitcher.isLightTheme ? 'dark' : 'light'" type="button" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="navbarNav">
       <span class="navbar-toggler-icon"></span>
