--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,10 @@
 .nav-link {
     padding: 20px;
     margin: 0 10px;
+
+    &::after {
+        display: none;
+    }
 }
 
 .nav-link {
@@ -58,17 +62,25 @@
 }
 
 
-a>.logo {
-    border-radius: 100%;
-    transition: 0.3s;
-    width: 50px;
-    height: 50px;
+.logo {
+    &::after {
+        display: none;
+    }
+
+    img {
+        border-radius: 100%;
+        transition: 0.3s;
+        width: 50px;
+        height: 50px;
+    }
 }
 
-a:hover>.logo {
-    transition: 0.2s;
-    transform: rotate(10deg) scale(1.25);
-    filter: brightness(1.25);
+.logo:hover {
+    img {
+        transition: 0.2s;
+        transform: rotate(10deg) scale(1.25);
+        filter: brightness(1.25);
+    }
 }
 
 .notice {
