--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -14,6 +14,10 @@
     border-width: 1px;
     margin-bottom: -1px;
 
+    &::after {
+        display: none;
+    }
+
     &:hover {
         .url {
             opacity: 1;
