Made contact links always show, and aligned email and discord links to the right

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,8 +2,8 @@
 
 <p>I call myself "Ascyt" pretty much everywhere. Here's all of my stuff:</p>
 <ul class="list-group">
-    <li class="list-group-item">Email: <b>contact<span style="font-size: 0;">&lt;&lt;!REMOVE_THIS!&gt;&gt;</span>&#64;ascyt.com</b></li>
-    <li class="list-group-item">Discord: <b>&#64;ascyt</b></li>
+    <li class="list-group-item">Email<b>contact<span style="font-size: 0;">&lt;&lt;!REMOVE_THIS!&gt;&gt;</span>&#64;ascyt.com</b></li>
+    <li class="list-group-item">Discord<b>&#64;ascyt</b></li>
     <a href="/github" target="_blank" class="list-group-item list-group-item-action">GitHub <span class="url">https://github.com/Ascyt</span></a>
     <a href="/youtube" target="_blank" class="list-group-item list-group-item-action">YouTube <span class="url">https://www.youtube.com/Ascyt</span></a>
     <a href="/bsky" target="_blank" class="list-group-item list-group-item-action">bsky.app <span class="url">https://bsky.app/profile/ascyt.bsky.social</span></a>
