--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,9 @@
 <h2 class="mb-2">Home</h2>
 
 <p class="text-left">Hey there! My name's Filip Schauer and I'm a {{getCurrentAge()}} year old programmer from Austria.</p>
+@if (isBirthday) {
+    <p class="text-left">It also happens to be my birthday today, so that's cool.</p>
+}
 
 <p class="text-left">You're currently looking at my personal website. 
     It's written in <a href="https://angular.io/" target="_blank" ngbTooltip="https://angular.io/">Angular</a>, hosted using <a href="https://netlify.com/" target="_blank" ngbTooltip="https://netlify.com/">Netlify</a> and you can find the source-code <a routerLink="/source" target="_blank" ngbTooltip="https://github.com/Ascyt/www">here</a>.
