Added 4D Projection Playground project; other improvements to projects

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,7 @@
 <h2 class="mb-4">Projects</h2>
 
+<p>Most of my projects are <a href="https://en.wikipedia.org/wiki/Open_source" target="_blank" ngbTooltip="https://en.wikipedia.org/wiki/Open_source">Open Source</a> and the source code for them can be found in my <a href="/github" target="_blank" ngbTooltip="https://github.com/Ascyt">GitHub</a>.</p>
+
 <!-- Grid of projects -->
 <div class="row">
     <div class="col-md-4" *ngFor="let project of projects">
