Increased performance of tesseract using signals

--- a/src/app/spinning-tesseract/spinning-tesseract.component.html
+++ b/src/app/spinning-tesseract/spinning-tesseract.component.html
@@ -1,10 +1,10 @@
 <svg [attr.width]="svgSize.width" [attr.height]="svgSize.height">
     <!-- Vertices -->
-    @for (vertex of vertexPositions; track vertex) {
+    @for (vertex of vertexPositions(); track $index) {
         <circle [attr.cx]="vertex.x" [attr.cy]="vertex.y" r="1" [attr.fill]="svgColor"></circle>
     }
     <!-- Edges -->
-    @for (edge of edgePositions; track edge) {
+    @for (edge of edgePositions(); track $index) {
         <line [attr.x1]="edge[0].x" [attr.y1]="edge[0].y" [attr.x2]="edge[1].x" [attr.y2]="edge[1].y" [attr.stroke]="svgColor" stroke-width="2"></line>
     }
 </svg>
