--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -6,7 +6,7 @@
     <li class="list-group-item">Discord<b>&#64;ascyt</b></li>
     <a href="/github" target="_blank" class="list-group-item list-group-item-action">GitHub <span class="url">https://github.com/Ascyt</span></a>
     <a href="/youtube" target="_blank" class="list-group-item list-group-item-action">YouTube <span class="url">https://www.youtube.com/Ascyt</span></a>
-    <a href="/bsky" target="_blank" class="list-group-item list-group-item-action">bsky.app <span class="url">https://bsky.app/profile/ascyt.bsky.social</span></a>
+    <a href="/bsky" target="_blank" class="list-group-item list-group-item-action">Bluesky <span class="url">https://bsky.app/profile/ascyt.com</span></a>
 </ul>
 
 <p *ngIf="themeSwitcherService.isLightTheme" style="margin-top: 200px; color:rgba(0, 0, 0, 0.1); font-size: x-small; position:absolute">imagine using light mode</p>
